--- a/css/styles.css
+++ b/css/styles.css
@@ -80,11 +80,6 @@ body {
     padding-right: 15px;
 }
 
-/* .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-} */
-
 .section-title {
     text-align: center;
     color: var(--navy-blue-color);
@@ -116,6 +111,7 @@ body {
 .page-header-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header-nav {
@@ -124,6 +120,10 @@ body {
     width: 100%;
     max-width: 452px;
     justify-content: space-between;
+}
+
+.header-nav a {
+    display: block;
 }
 
 .logotype {
@@ -144,13 +144,14 @@ body {
 .nav-menu {
     display: flex;
     gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .nav-menu-link {
+    /* display: block; */
     color: var(--navy-blue-color);
     font-weight: var(--medium-font-weight);
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .contacts {
@@ -160,8 +161,10 @@ body {
 .contacts-list {
     display: flex;
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    align-items: center;
+    justify-content: center;
+    /* padding-top: 24px;
+    padding-bottom: 24px; */
 }
 
 .nav-menu-link:hover,
